test/valid/66128_var_expression_value/var_expression_value.mag
-- Author: 66128, Daniel Sousa

fun main (_) : Unit -> Unit =
    print(var x : Int = 7)