test/invalid-syntax/54483_missing_equals_const/missing_equals_const.mag
-- Author: 54483, Pedro Barata

-- Syntax error: const declaration missing '='

const x : Int 42

fun main (_) : Unit -> Unit =
  print(x)
